[gd_scene load_steps=2 format=3 uid="uid://iy8rxunr4xcq"]

[ext_resource type="Script" path="res://Units/Components/health_component.gd" id="1_8f8gq"]

[node name="HealthComponent" type="Node2D"]
script = ExtResource("1_8f8gq")

[node name="CrowDotTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="CrowDotTimer" to="." method="_on_crow_dot_timer_timeout"]
